<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/document_group"
        android:textColor="@color/black"
        android:textSize="@dimen/dialog_size"
        android:enabled="true" />

    <ListView
        android:id="@+id/dialog_list"
        android:layout_width="274dp"
        android:layout_height="226dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:visibility="visible"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tv_dialog_all"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/document_all"
            android:textSize="@dimen/dialog_size"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_dialog_close"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/document_close"
            android:gravity="center"
            android:textSize="@dimen/dialog_size"
            android:textColor="@color/black"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>