<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/auto_run_when_boot"
		    android:textSize="25sp"
		    android:textStyle="normal" />

		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="right">

			<Switch
			    android:id="@+id/auto_run"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"/>
		</LinearLayout>
    </LinearLayout>
    
    <View
  		android:layout_width="fill_parent"
  		android:layout_height="2dip"
  		android:background="#FF909090"/>

    <LinearLayout 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/video_size"
		    android:textSize="25sp"
		    android:textStyle="normal" />

		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="right">
		<Spinner
		    android:id="@+id/videosize"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:entries="@array/videosize" />
		</LinearLayout>
    </LinearLayout>
    
    <View
  		android:layout_width="fill_parent"
  		android:layout_height="2dip"
  		android:background="#FF909090"/>

    <LinearLayout 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/video_duration"
		    android:textSize="25sp"
		    android:textStyle="normal" />

		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="right">
		<Spinner
		    android:id="@+id/videoduration"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:entries="@array/videoduration" />
		</LinearLayout>
    </LinearLayout>
    
    <View
  		android:layout_width="fill_parent"
  		android:layout_height="2dip"
  		android:background="#FF909090"/>

    <LinearLayout 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/audio_sync"
		    android:textSize="25sp"
		    android:textStyle="normal" />

		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="right">

			<Switch
			    android:id="@+id/audio"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"/>
		</LinearLayout>
    </LinearLayout>
    
    <View
  		android:layout_width="fill_parent"
  		android:layout_height="2dip"
  		android:background="#FF909090"/>
    
    <LinearLayout 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/collision_sensitivity"
		    android:textSize="25sp"
		    android:textStyle="normal" />

		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="right">
		<Spinner
		    android:id="@+id/collision"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:entries="@array/collision_sensitivity" />
		</LinearLayout>
    </LinearLayout>
    
    <View
  		android:layout_width="fill_parent"
  		android:layout_height="2dip"
  		android:background="#FF909090"/>
</LinearLayout>
