<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_send_image"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="@dimen/dialog_size" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_friend"
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/dialog_name_size" />
    </LinearLayout>

    <ImageView
        android:id="@+id/dialog_img"
        android:layout_marginTop="5dp"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:visibility="gone"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/et_friend_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:visibility="visible"
        android:maxLines="3"
        android:paddingLeft="10dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:visibility="visible"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/btn_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/btn_dialog_send"
            android:text="@string/dialog_cancel" />

        <Button
            android:id="@+id/btn_dialog_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/dialog_send"
            android:layout_marginEnd="20dp" />

    </RelativeLayout>

</LinearLayout>